--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-
-# Site settings
-baseurl: ""
+safe: false
+baseurl: /
+url: http://localhost:4000/
 
 name: Leonardo Merlin
 description: "A craftsman developer who lives in Brazil and work for the largest south american government company."
@@ -11,6 +11,11 @@ email: hi@leonardomerlin.com.br
 twitter_username: leonardomerlin
 github_username:  leonardomerlin
 google_analytics: UA-35971148-1
+
+source: .
+destination: ./_site
+plugins: ./_plugins
+paginate_path: 'blog/page:num'
 
 # Build settings
 markdown: kramdown
