Run gulp only changed files

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.8.10",
     "gulp-imagemin": "^2.0.0",
     "imagemin-jpeg-recompress": "^4.0.0",
-    "imagemin-pngquant": "^4.0.0"
+    "imagemin-pngquant": "^4.0.0",
+    "gulp-changed": "^1.0.0"
   }
 }
